--- a/week-17-react/dbug/todo/src/component/todoApp/TodoApp.css
+++ b/week-17-react/dbug/todo/src/component/todoApp/TodoApp.css
@@ -6,11 +6,9 @@ body{
 
 .todo-container{
     width: 350px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
     text-align: center;
+    margin: auto;
+    margin-top: 30px;
 }
 
 .input-section{
@@ -48,6 +46,7 @@ ul li{
 ul li i{
     text-align: right;
     flex: 1;
+    cursor: pointer;
 }
 h1{
     margin: 0;
